// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agent usage golden > reports the same usage > afterAppend 1`] = `
{
  "agents": [
    {
      "agentId": "claude",
      "allTime": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 418,
        "messages": 5,
        "output": 179,
        "total": 1797,
      },
      "blockBudget": 50000,
      "hasData": true,
      "history": [
        {
          "date": "2026-10-02",
          "total": 10,
        },
        {
          "date": "2026-10-07",
          "total": 420,
        },
        {
          "date": "2026-10-08",
          "total": 1367,
        },
      ],
      "label": "Claude",
      "lastActivity": "2026-10-08T11:59:30.000Z",
      "rateLimit": {
        "limitReached": false,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "planType": null,
        "reachedType": null,
        "resetsAt": "2026-10-12T00:00:00Z",
        "source": "reported",
        "usedPercent": 61,
        "windowMinutes": 10080,
        "windows": [
          {
            "kind": "weekly",
            "resetsAt": "2026-10-12T00:00:00Z",
            "usedPercent": 61,
            "windowMinutes": 10080,
          },
        ],
      },
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "sessionWindow": {
        "budget": 50000,
        "hours": 5,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "resetsAt": "2026-10-08T14:30:00.000Z",
        "source": "reported",
        "startsAt": "2026-10-08T09:30:00.000Z",
        "totals": {
          "cacheRead": 1000,
          "cacheWrite": 200,
          "input": 111,
          "messages": 3,
          "output": 56,
          "total": 1367,
        },
        "usedPercent": 42.5,
      },
      "today": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 111,
        "messages": 3,
        "output": 56,
        "total": 1367,
      },
      "week": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 418,
        "messages": 5,
        "output": 179,
        "total": 1797,
      },
      "weeklyBudget": 2000000,
    },
  ],
  "generatedAt": "2026-10-08T12:00:00.000Z",
  "since": null,
}
`;

exports[`agent usage golden > reports the same usage > budgets 1`] = `
{
  "claude": 2000000,
  "claude#5h": 50000,
}
`;

exports[`agent usage golden > reports the same usage > everything 1`] = `
{
  "agents": [
    {
      "agentId": "claude",
      "allTime": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 417,
        "messages": 4,
        "output": 178,
        "total": 1795,
      },
      "blockBudget": 50000,
      "hasData": true,
      "history": [
        {
          "date": "2026-10-02",
          "total": 10,
        },
        {
          "date": "2026-10-07",
          "total": 420,
        },
        {
          "date": "2026-10-08",
          "total": 1365,
        },
      ],
      "label": "Claude",
      "lastActivity": "2026-10-08T11:30:00.000Z",
      "rateLimit": {
        "limitReached": false,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "planType": null,
        "reachedType": null,
        "resetsAt": "2026-10-12T00:00:00Z",
        "source": "reported",
        "usedPercent": 61,
        "windowMinutes": 10080,
        "windows": [
          {
            "kind": "weekly",
            "resetsAt": "2026-10-12T00:00:00Z",
            "usedPercent": 61,
            "windowMinutes": 10080,
          },
        ],
      },
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "sessionWindow": {
        "budget": 50000,
        "hours": 5,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "resetsAt": "2026-10-08T14:30:00.000Z",
        "source": "reported",
        "startsAt": "2026-10-08T09:30:00.000Z",
        "totals": {
          "cacheRead": 1000,
          "cacheWrite": 200,
          "input": 110,
          "messages": 2,
          "output": 55,
          "total": 1365,
        },
        "usedPercent": 42.5,
      },
      "today": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 110,
        "messages": 2,
        "output": 55,
        "total": 1365,
      },
      "week": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 417,
        "messages": 4,
        "output": 178,
        "total": 1795,
      },
      "weeklyBudget": 2000000,
    },
    {
      "agentId": "codex",
      "allTime": {
        "cacheRead": 200,
        "cacheWrite": 0,
        "input": 300,
        "messages": 1,
        "output": 80,
        "total": 580,
      },
      "blockBudget": null,
      "hasData": true,
      "history": [
        {
          "date": "2026-10-08",
          "total": 580,
        },
      ],
      "label": "Codex",
      "lastActivity": "2026-10-08T10:20:00.000Z",
      "rateLimit": {
        "limitReached": false,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "planType": "plus",
        "reachedType": null,
        "resetsAt": "2026-10-13T00:00:00.000Z",
        "source": "reported",
        "usedPercent": 33,
        "windowMinutes": 10080,
        "windows": [
          {
            "kind": "session",
            "resetsAt": "2026-10-08T15:00:00.000Z",
            "usedPercent": 17,
            "windowMinutes": 300,
          },
          {
            "kind": "weekly",
            "resetsAt": "2026-10-13T00:00:00.000Z",
            "usedPercent": 33,
            "windowMinutes": 10080,
          },
        ],
      },
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "sessionWindow": {
        "budget": null,
        "hours": 5,
        "observedAt": null,
        "resetsAt": "2026-10-08T15:00:00.000Z",
        "source": "derived",
        "startsAt": "2026-10-08T10:00:00.000Z",
        "totals": {
          "cacheRead": 200,
          "cacheWrite": 0,
          "input": 300,
          "messages": 1,
          "output": 80,
          "total": 580,
        },
        "usedPercent": null,
      },
      "today": {
        "cacheRead": 200,
        "cacheWrite": 0,
        "input": 300,
        "messages": 1,
        "output": 80,
        "total": 580,
      },
      "week": {
        "cacheRead": 200,
        "cacheWrite": 0,
        "input": 300,
        "messages": 1,
        "output": 80,
        "total": 580,
      },
      "weeklyBudget": null,
    },
    {
      "agentId": "custom-aider",
      "allTime": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "blockBudget": null,
      "hasData": false,
      "history": [],
      "label": "Aider",
      "lastActivity": null,
      "rateLimit": null,
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "sessionWindow": null,
      "today": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "week": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "weeklyBudget": null,
    },
  ],
  "generatedAt": "2026-10-08T12:00:00.000Z",
  "since": null,
}
`;

exports[`agent usage golden > reports the same usage > sinceOpened 1`] = `
{
  "agents": [
    {
      "agentId": "claude",
      "allTime": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 417,
        "messages": 4,
        "output": 178,
        "total": 1795,
      },
      "blockBudget": 50000,
      "hasData": true,
      "history": [
        {
          "date": "2026-10-02",
          "total": 10,
        },
        {
          "date": "2026-10-07",
          "total": 420,
        },
        {
          "date": "2026-10-08",
          "total": 1365,
        },
      ],
      "label": "Claude",
      "lastActivity": "2026-10-08T11:30:00.000Z",
      "rateLimit": {
        "limitReached": false,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "planType": null,
        "reachedType": null,
        "resetsAt": "2026-10-12T00:00:00Z",
        "source": "reported",
        "usedPercent": 61,
        "windowMinutes": 10080,
        "windows": [
          {
            "kind": "weekly",
            "resetsAt": "2026-10-12T00:00:00Z",
            "usedPercent": 61,
            "windowMinutes": 10080,
          },
        ],
      },
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 10,
        "messages": 1,
        "output": 5,
        "total": 15,
      },
      "sessionWindow": {
        "budget": 50000,
        "hours": 5,
        "observedAt": "2026-10-08T12:00:00.000Z",
        "resetsAt": "2026-10-08T14:30:00.000Z",
        "source": "reported",
        "startsAt": "2026-10-08T09:30:00.000Z",
        "totals": {
          "cacheRead": 1000,
          "cacheWrite": 200,
          "input": 110,
          "messages": 2,
          "output": 55,
          "total": 1365,
        },
        "usedPercent": 42.5,
      },
      "today": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 110,
        "messages": 2,
        "output": 55,
        "total": 1365,
      },
      "week": {
        "cacheRead": 1000,
        "cacheWrite": 200,
        "input": 417,
        "messages": 4,
        "output": 178,
        "total": 1795,
      },
      "weeklyBudget": 2000000,
    },
    {
      "agentId": "custom-aider",
      "allTime": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "blockBudget": null,
      "hasData": false,
      "history": [],
      "label": "Aider",
      "lastActivity": null,
      "rateLimit": null,
      "session": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "sessionWindow": null,
      "today": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "week": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "input": 0,
        "messages": 0,
        "output": 0,
        "total": 0,
      },
      "weeklyBudget": null,
    },
  ],
  "generatedAt": "2026-10-08T12:00:00.000Z",
  "since": "2026-10-08T10:00:00.000Z",
}
`;
